--- a/package.json
+++ b/package.json
@@ -132,7 +132,8 @@
     "urijs": "^1.17.1",
     "url-loader": "^0.5.7",
     "warning": "^3.0.0",
-    "webpack": "^1.12.15"
+    "webpack": "^1.12.15",
+    "webpack-isomorphic-tools": "^2.2.44"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
@@ -147,7 +148,6 @@
     "redbox-react": "^1.1.1",
     "redux-devtools": "^3.1.1",
     "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.5.0",
-    "webpack-isomorphic-tools": "^2.2.44"
+    "webpack-hot-middleware": "^2.5.0"
   }
 }
